Keep up to date with Main (#5)
* Add New Cart Feature

CONTROLLER changes
carts.py 
 - added functions for starting a cart list
 - added specific products to cart contents
 - pushed cart contents to old carts upon completion
home.py
 - changes pulled from main

MODEL changes
cartModel.py
 - adapted CartModel to add cart name and time started
     **this will allow for later updates to cart when user stops in midst of creating cart**
 - added CartListModel to store the names of products user wants to buy
 - added CartContentsModel to store the exact pids user wants to buy
oldCartContentModel.py
 - added insert method to add old cart at end of new cart process
productModel.py
 - add simple substring search function 

VIEW changes
base.html 
 - added data tables reference
newcarts.html
 - dynamic form to create list for carts
cartinprogress.html
 - form to select which products user is interested in purchasing for each item entered
completeCart.html
 - user can select which products they ended up purchasing and quantity of each

DB
 - add cartLists database
 - updated generated fake data

* Styling changes to landing and home page

* Preferences/Carrot Functionality (#19)

* Added carrot functionality + implemented on home

* Fixed old carts page to display carts and products

* Clarifying rotten carrot

* Data analytics (#20)

* Added carts endpoint

* Added name and price filter for products page

* added all the filters to products page

* Added historical spending

* added second data-analytics chart

* Productstab (#18)

* Added carts endpoint

* Added name and price filter for products page

* added all the filters to products page

* Apply Theming to Current Workflow/Site (#21)

Styles current pages and workflow, applying cohesive brand "theming" and other design choices. Makes user workflow more intuitive

* fixed html loading error (#23)

* Update data

* Clean up queries for OldCartConte

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,35 +1,45 @@
-{% block content %}
+{% extends "base.html" %}
 
-<h1 style="text-align:center">Welcome to Thrifty Carrot!</h1>
-<form action="" method="post" novalidate style="text-align:center">
-  {{ form.hidden_tag() }}
-  <p>
-    {{ form.email.label }}<br/>
-    {{ form.email(size=32) }}<br/>
-    {% for error in form.email.errors %}
-    <span style="color: red;">[{{ error }}]</span>
-    {% endfor %}
-  </p>
-  <p>
-    {{ form.password.label }}<br/>
-    {{ form.password(size=32) }}<br/>
-    {% for error in form.password.errors %}
-    <span style="color: red;">[{{ error }}]</span>
-    {% endfor %}
-  </p>
-  <p>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-      {% for message in messages %}
-      <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
-  </p>
-  {{ form.submit(class_="btn btn-black") }}
-  <a class="btn btn-secondary" href="{{ url_for('users.register') }}" role="button">New? Register here</a>
-</form>
-
-{% endblock %}
+{% block body %}
+<body style="background-color:#A0E8A2">
+<div class="center">
+  <div class="login-logo-bg">
+  </div>
+  <img src="{{ url_for('static', filename='CarrotIcon.png') }}" alt="Cartoon Carrot Logo" class="login-logo-carrot">
+  <div class="login-box">
+    <h1 class="font-weight-bold">Thrifty Carrot</h1>
+    <h2>Welcome!<h2>
+    <form action="" method="post" novalidate style="text-align:center">
+      {{ form.hidden_tag() }}
+      <p>
+        {{ form.email.label }} <br/>
+        {{ form.email(size=32) }} <br/>
+        {% for error in form.email.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+      </p>
+      <p>
+        {{ form.password.label }}<br/>
+        {{ form.password(size=32) }}<br/>
+        {% for error in form.password.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+      </p>
+      <p>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+          {% for message in messages %}
+          <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+      </p>
+      {{ form.submit(class_="btn btn-black") }}
+      <a class="btn btn-secondary" href="{{ url_for('users.register') }}" role="button">New? Register here</a>
+    </form>
+  </div>
+</div>
+</body>
+{% endblock body %}
