--- a/app/templates/preferences.html
+++ b/app/templates/preferences.html
@@ -1,6 +1,6 @@
 <!-- uid, pid, product_name, price, category, store -->
 
-{% extends "base.html" %}
+{% extends "navbar.html" %}
 
 {% block content %}
 
