--- a/app/templates/userInquiry.html
+++ b/app/templates/userInquiry.html
@@ -1,7 +1,7 @@
 <!-- view -->
 <!-- cid, pid, product_name, price, category, store -->
 
-{% extends "base.html" %}
+{% extends "navbar.html" %}
 
 {% block content %}
 
